@@ -382,7 +382,7 @@ out:
  * Parameters: hostid - host identifier from database                         *
  *             maintenance_from, maintenance_to - maintenance period bounds   *
  *                                                                            *
- * Return value:                                                              *
+ * Return value: ret - number of hosts that went in and out of maintenance    *
  *                                                                            *
  * Author: Alexander Vladishev                                                *
  *                                                                            *
@@ -438,7 +438,7 @@ static void	generate_events(zbx_uint64_t hostid, int maintenance_from, int maint
 	zabbix_log(LOG_LEVEL_DEBUG, "End of %s()", __function_name);
 }
 
-static void	update_maintenance_hosts(zbx_host_maintenance_t *hm, int hm_count, int now)
+static int	update_maintenance_hosts(zbx_host_maintenance_t *hm, int hm_count, int now)
 {
 	typedef struct
 	{
@@ -457,6 +457,7 @@ static void	update_maintenance_hosts(zbx_host_maintenance_t *hm, int hm_count, i
 	char		*sql = NULL;
 	size_t		sql_alloc = ZBX_KIBIBYTE, sql_offset;
 	maintenance_t	*maintenances = NULL, *m;
+	int		ret = 0;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s()", __function_name);
 
@@ -501,6 +502,8 @@ static void	update_maintenance_hosts(zbx_host_maintenance_t *hm, int hm_count, i
 
 			DCconfig_set_maintenance(&hm[i].hostid, 1, HOST_MAINTENANCE_STATUS_ON,
 					hm[i].maintenance_type, hm[i].maintenance_from);
+
+			ret++;
 		}
 
 		uint64_array_add(&ids, &ids_alloc, &ids_num, hm[i].hostid, 4);
@@ -561,6 +564,8 @@ static void	update_maintenance_hosts(zbx_host_maintenance_t *hm, int hm_count, i
 		DBexecute("%s", sql);
 
 		DCconfig_set_maintenance(ids, ids_num, HOST_MAINTENANCE_STATUS_OFF, 0, 0);
+
+		ret += ids_num;
 	}
 
 	DBcommit();
@@ -578,6 +583,8 @@ static void	update_maintenance_hosts(zbx_host_maintenance_t *hm, int hm_count, i
 	}
 
 	zabbix_log(LOG_LEVEL_DEBUG, "End of %s()", __function_name);
+
+	return ret;
 }
 
 /******************************************************************************
@@ -621,7 +628,7 @@ static int	process_maintenance(void)
 					db_period, db_maintenance_type;
 	static zbx_host_maintenance_t	*hm = NULL;
 	static int			hm_alloc = 4;
-	int				hm_count = 0, res;
+	int				hm_count = 0, ret;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s()", __function_name);
 
@@ -762,19 +769,19 @@ static int	process_maintenance(void)
 		if (maintenance_from < db_active_since)
 			maintenance_from = db_active_since;
 
-		process_maintenance_hosts(&hm, &hm_alloc, &hm_count, maintenance_from, db_maintenanceid, db_maintenance_type);
+		process_maintenance_hosts(&hm, &hm_alloc, &hm_count, maintenance_from, db_maintenanceid,
+				db_maintenance_type);
 	}
 	DBfree_result(result);
 
-	update_maintenance_hosts(hm, hm_count, (int)now);
-
-	res = hm_count;
+	ret = update_maintenance_hosts(hm, hm_count, (int)now);
 
 	while (0 != hm_count--)
 		zbx_free(hm[hm_count].host);
 
 	zabbix_log(LOG_LEVEL_DEBUG, "End of %s()", __function_name);
-	return res;
+
+	return ret;
 }
 
 /******************************************************************************
@@ -833,7 +840,7 @@ void	main_timer_loop(void)
 				else
 				{
 					zbx_setproctitle("%s #1 [processed %d triggers, %d events in " ZBX_FS_DBL
-							" sec, %d maint.periods in " ZBX_FS_DBL " sec, processing time "
+							" sec, %d maintenances in " ZBX_FS_DBL " sec, processing time "
 							"functions]",
 							get_process_type_string(process_type),
 							triggers_count, events_count, total_sec, hm_count,
@@ -852,7 +859,7 @@ void	main_timer_loop(void)
 				else
 				{
 					zbx_setproctitle("%s #1 [processed %d triggers, %d events in " ZBX_FS_DBL
-							" sec, %d maint.periods in " ZBX_FS_DBL " sec, idle %d sec]",
+							" sec, %d maintenances in " ZBX_FS_DBL " sec, idle %d sec]",
 							get_process_type_string(process_type),
 							triggers_count, events_count, total_sec, hm_count,
 							total_sec_maint, sleeptime);
@@ -886,7 +893,7 @@ void	main_timer_loop(void)
 			else
 			{
 				zbx_setproctitle("%s #1 [processed %d triggers, %d events in " ZBX_FS_DBL
-						" sec, %d maint.periods in " ZBX_FS_DBL " sec, processing time "
+						" sec, %d maintenances in " ZBX_FS_DBL " sec, processing time "
 						"functions]",
 						get_process_type_string(process_type),
 						old_triggers_count, old_events_count, old_total_sec, old_hm_count,
@@ -911,7 +918,7 @@ void	main_timer_loop(void)
 		if (0 == nextcheck % SEC_PER_MIN || nextcheck + SEC_PER_MIN - (nextcheck % SEC_PER_MIN) <= time(NULL))
 		{
 			zbx_setproctitle("%s #1 [processed %d triggers, %d events in " ZBX_FS_DBL
-					" sec, %d maint.periods in " ZBX_FS_DBL " sec, processing maintenance periods]",
+					" sec, %d maintenances in " ZBX_FS_DBL " sec, processing maintenance periods]",
 					get_process_type_string(process_type),
 					triggers_count, events_count, total_sec, old_hm_count,
 					old_total_sec_maint);
